endpoint division with unit tests